err/paver-pipeline.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/CoffeeScript-2.0.1.egg-info'...
Listing './lib/python3.5/site-packages/PyExecJS-1.5.0.egg-info'...
Listing './lib/python3.5/site-packages/PyNg_Annotate-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/UgliPyJS-0.2.5.egg-info'...
Listing './lib/python3.5/site-packages/coffeescript'...
Listing './lib/python3.5/site-packages/execjs'...
Listing './lib/python3.5/site-packages/jsmin'...
Listing './lib/python3.5/site-packages/jsmin-2.2.2.egg-info'...
Listing './lib/python3.5/site-packages/paver_pipeline'...
Compiling './lib/python3.5/site-packages/paver_pipeline/_pave.py'...
***   File "./lib/python3.5/site-packages/paver_pipeline/_pave.py", line 151
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/paver_pipeline/git.py'...
***   File "./lib/python3.5/site-packages/paver_pipeline/git.py", line 43
    print options
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/paver_pipeline/loader.py'...
***   File "./lib/python3.5/site-packages/paver_pipeline/loader.py", line 37
    print globals().keys()
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/paver_pipeline/pyng.py'...
***   File "./lib/python3.5/site-packages/paver_pipeline/pyng.py", line 41
    print context.call('seePath')
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/paver_pipeline-0.0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/uglipyjs'...
Listing './share'...
Listing './share/python-wheels'...
